<resources>
    <string name="app_name">Triple Trivia</string>
    <string name="preference_file_key">com.davidjeastman.tripletrivia.PREFERENCE_FILE_KEY</string>

    <string name="profile_setup_name_hint">Name</string>
    <string name="profile_setup_location_hint">Location</string>
    <string name="profile_setup_submit_button">Done</string>
    <string name="profile_setup_notification_name">Need a name!</string>
    <string name="profile_setup_notification_location">Need a location!</string>

    <string name="profile_name_label">Name</string>
    <string name="profile_location_label">Location</string>
    <string name="profile_level_label">Level</string>
    <string name="profile_points_label">Points</string>
    <string name="profile_level_text">Level %d</string>
    <string name="profile_rank_label">Rank</string>
    <string name="profile_label">Profile</string>
    <string name="leaderboard_label">Leaderboard</string>
    <string name="settings_label">Settings</string>
    <string name="about_label">About</string>
    <string name="play_button">Play</string>

    <string name="sound_setting_label">Sound FX</string>
    <string name="sound_on_off_key">SOUND_ON_OFF</string>

    <string name="digit_placeholder">#</string>
    <string name="starting">Starting&#8230;</string>
    <string name="go">GO!</string>

    <string name="question_text_placeholder">This is a question text placeholder?
        This is a question text placeholder? This is a question text placeholder?
        This is a question text placeholder?</string>
    <string name="answer_button_1">Answer 1</string>
    <string name="answer_button_2">Answer 2</string>
    <string name="answer_button_3">Answer 3</string>
    <string name="answer_button_4">Answer 4</string>

    <string name="game_over">GAME OVER</string>
    <string name="stage">STAGE</string>
    <string name="stage_completed">STAGE %d COMPLETED</string>
    <string name="better_luck">Better luck next time!</string>
    <string name="correct_answers">%1$d / %2$d Correct Answers</string>
    <string name="points_fraction">%1$s / %2$d</string>
    <string name="progress_to_level">PROGRESS TO LEVEL</string>
    <string name="time_bonus">Time Bonus</string>
    <string name="points">Points</string>
    <string name="points_abbrev">PTS</string>
    <string name="try_again_button">TRY AGAIN</string>
    <string name="continue_button">CONTINUE</string>

    <string name="question_list">Questions</string>

</resources>
