<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_margin="16dp"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:id="@+id/profile_name_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile_name_label"/>
    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:id="@+id/profile_location_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile_location_label"/>
    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:id="@+id/profile_level_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile_level_label"/>
    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:id="@+id/profile_points_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile_points_label"/>
    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:id="@+id/profile_rank_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile_rank_label"/>
    <Button
        android:id="@+id/play_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/play_button"/>
</LinearLayout>