<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        layout="@layout/textview_appnamebar"
        android:id="@+id/app_name_textview"
        android:layout_width="0dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/question_textview"
        android:text="@string/question_text_placeholder"
        android:textColor="@color/white"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:gravity="center"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:elevation="2dp"
        android:padding="6dp"
        android:background="@drawable/textview_question"
        app:layout_constraintTop_toBottomOf="@+id/app_name_textview"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="16dp"
        />

    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/correct_box_imageview"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:elevation="4dp"
        android:background="?attr/colorAccent"
        app:layout_constraintTop_toBottomOf="@+id/question_textview"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/answer_button_1"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="16dp"/>

    <Button
        style="@style/AnswerButton"
        android:id="@+id/answer_button_1"
        android:text="@string/answer_button_1"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:elevation="2dp"
        android:padding="6dp"
        android:background="@drawable/button_answer"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/answer_button_2"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        />

    <Button
        style="@style/AnswerButton"
        android:id="@+id/answer_button_2"
        android:text="@string/answer_button_2"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:elevation="2dp"
        android:padding="6dp"
        android:background="@drawable/button_answer"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/answer_button_3"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        />

    <Button
        style="@style/AnswerButton"
        android:id="@+id/answer_button_3"
        android:text="@string/answer_button_3"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:elevation="2dp"
        android:padding="6dp"
        android:background="@drawable/button_answer"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/answer_button_4"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"/>

    <Button
        style="@style/AnswerButton"
        android:id="@+id/answer_button_4"
        android:text="@string/answer_button_4"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:elevation="2dp"
        android:padding="6dp"
        android:background="@drawable/button_answer"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        />


</android.support.constraint.ConstraintLayout>