<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/stage_top_constraintlayout"
        android:orientation="vertical"
        android:background="@color/white"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">

        <TextView
            android:id="@+id/stage_status_textview"
            android:text="@string/app_name"
            android:background="@color/colorAccent"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textAlignment="center"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            />

        <TextView
            android:id="@+id/question_textview"
            android:layout_width="270dp"
            android:layout_height="166dp"
            android:ems="10"
            android:background="@color/colorAccent"
            app:layout_constraintTop_toBottomOf="@+id/stage_status_textview"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginBottom="8dp"
            android:layout_marginRight="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="16dp"
            />

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/correct_box_imageview"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@color/gray"
            app:layout_constraintTop_toBottomOf="@+id/question_textview"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="16dp"/>
    </android.support.constraint.ConstraintLayout>


    <android.support.constraint.ConstraintLayout
        android:id="@+id/stage_bottom_constraintlayout"
        android:orientation="vertical"
        android:background="@color/gray"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/stage_top_constraintlayout"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="24dp">

        <Button
            android:id="@+id/answer_button_1"
            android:text="@string/answer_button_1"
            android:layout_width="0dp"
            android:layout_height="60dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/answer_button_2"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"/>

        <Button
            android:id="@+id/answer_button_2"
            android:text="@string/answer_button_2"
            android:layout_width="0dp"
            android:layout_height="60dp"
            app:layout_constraintTop_toBottomOf="@+id/answer_button_1"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/answer_button_3"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"/>

        <Button
            android:id="@+id/answer_button_3"
            android:text="@string/answer_button_3"
            android:layout_width="0dp"
            android:layout_height="60dp"
            app:layout_constraintTop_toBottomOf="@+id/answer_button_2"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/answer_button_4"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"/>

        <Button
            android:id="@+id/answer_button_4"
            android:text="@string/answer_button_4"
            android:layout_width="0dp"
            android:layout_height="60dp"
            app:layout_constraintTop_toBottomOf="@+id/answer_button_3"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"/>

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>