<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/stage_end_constraintlayout"
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">

        <TextView
            android:id="@+id/stage_app_name_textview"
            android:text="@string/app_name"
            android:background="@color/appColorAccent"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textAlignment="center"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            />

        <TextView
            android:id="@+id/stage_end_message_textview"
            android:text="@string/stage"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@id/stage_app_name_textview"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="24dp"
            />

        <TextView
            android:id="@+id/stage_end_subtitle_textview"
            android:text=""
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@id/stage_end_message_textview"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="24dp"
            />

        <TextView
            android:id="@+id/stage_end_correct_answers_textview"
            android:text="@string/correct_answers"
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@id/stage_end_subtitle_textview"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="24dp"
            />

        <TextView
            android:id="@+id/stage_end_next_level_score_textview"
            android:text="@string/next_level_score"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@id/stage_end_correct_answers_textview"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="24dp"
            />

        <TextView
            android:id="@+id/stage_end_points_fraction_textview"
            android:text=""
            android:background="@color/appColorPrimaryDark"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@id/stage_end_next_level_score_textview"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="24dp"
            />


        <android.support.constraint.ConstraintLayout
            android:id="@+id/stage_end_time_bonus_constraintlayout"
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/stage_end_points_fraction_textview"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="8dp"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="24dp"
            >

            <TextView
                android:id="@+id/stage_end_time_bonus_textview"
                android:text="@string/time_bonus"
                android:layout_width="0dp"
                android:layout_height="32dp"
                android:gravity="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textAlignment="center"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginStart="32dp"
                />

            <TextView
                android:id="@+id/stage_end_time_bonus_points_abbrev_textview"
                android:text="@string/points_abbrev"
                android:layout_width="0dp"
                android:layout_height="32dp"
                android:gravity="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textAlignment="center"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginEnd="32dp"
                />
        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/stage_end_points_constraintlayout"
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/stage_end_time_bonus_constraintlayout"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="8dp"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="24dp"
            >

            <TextView
                android:id="@+id/stage_end_points_textview"
                android:text="@string/points"
                android:layout_width="0dp"
                android:layout_height="32dp"
                android:gravity="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textAlignment="center"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginStart="32dp"
                />

            <TextView
                android:id="@+id/stage_end_points_points_abbrev_textview"
                android:text="@string/points_abbrev"
                android:layout_width="0dp"
                android:layout_height="32dp"
                android:gravity="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textAlignment="center"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginEnd="32dp"
                />
        </android.support.constraint.ConstraintLayout>


        <Button
            android:id="@+id/stage_end_continue_try_again_button"
            android:text=""
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/stage_end_points_constraintlayout"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="16dp"
            android:layout_marginRight="48dp"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="48dp"/>

    </android.support.constraint.ConstraintLayout>


</android.support.constraint.ConstraintLayout>