<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/stage_load_stage_label_text_view"
        android:text="@string/stage"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:gravity="center"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/stage_load_stage_number_text_view"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="32dp"
        android:layout_marginStart="80dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="80dp"
        />

    <TextView
        android:id="@+id/stage_load_stage_number_text_view"
        android:text="@string/digit_placeholder"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:gravity="center"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/stage_load_stage_label_text_view"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/stage_load_countdown_button_container"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="80dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="80dp"
        />

    <FrameLayout
        android:id="@+id/stage_load_countdown_button_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/stage_load_stage_label_text_view"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/stage_load_stage_starting_text_view"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="80dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="80dp">
        <com.dinuscxj.progressbar.CircleProgressBar
            android:id="@+id/countdown_circle_progressbar"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:max="1000"
            app:style="solid_line"
            app:background_color="@color/mediumBlue"
            app:progress_text_color="@color/white"
            app:draw_progress_text="false"
            app:progress_stroke_width="5dp"
            app:progress_start_color="@color/lightBlue"
            app:progress_end_color="@color/lightBlue"
            app:progress_background_color="@color/gray"
            app:progress_shader="radial"
            app:progress_stroke_cap="square"
            app:line_width="4dp"
            app:line_count="30"
            android:layout_gravity="center"
            />

        <TextView
            android:id="@+id/stage_load_countdown_text_view"
            android:text="@string/digit_placeholder"
            android:textColor="@color/white"
            android:gravity="center"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Display1"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="80dp"
            android:layout_marginEnd="80dp"
            android:layout_gravity="center"
            android:elevation="24dp"
            />
    </FrameLayout>

    <TextView
        android:id="@+id/stage_load_stage_starting_text_view"
        android:text="@string/starting"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:gravity="center"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/stage_load_countdown_button_container"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="80dp"
        android:layout_marginBottom="96dp"
        android:layout_marginEnd="80dp"
        />

</android.support.constraint.ConstraintLayout>